# data_engineering

./: .gitignore  README.md  pyproject.toml
iceberg/nyc_taxi/: .pyiceberg.yaml  pyproject.toml
iceberg/nyc_taxi/plans/: plan.md
iceberg/nyc_taxi/scripts/: 00_setup_check.py  01_explore_duckdb.py  01_explore_polars.py  02_batch_download.py  03_write_iceberg.py
iceberg/nyc_taxi/src/nyc_taxi_iceberg/: __init__.py
