[project]
name = "nyc-taxi-iceberg"
version = "0.1.0"
description = "NYC Taxi Iceberg practice project"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "duckdb>=1.4.4",
    "polars[all]>=1.38.1",
    "pyiceberg[duckdb,pyarrow,s3fs,sql-sqlite]>=0.11.1",
    "requests>=2.32.5",
    "tqdm>=4.67.3",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/nyc_taxi_iceberg"]

[tool.uv]
package = true
